REGRESSION: LayoutTest fast/scrolling/arrow-key-scroll-in-rtl-document.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=249565 rdar://103502192

Reviewed by Simon Fraser.

The disabling of the scroll animator in this test wasn't actually doing anything.
Although that keyboard smooth scrolling defaults to whatever the initial setting
of `ScrollAnimatorEnabled` is, changing this flag at runtime in a test didn't
change the setting of smooth keyboard scrolling.

Now, smooth scrolling will always consult this setting, and so this test can now
be changed back to the way it was pre-keyboard smooth scrolling, which was not
flaky because the scroll animator was actually disabled and so everything happened
instantly.

* LayoutTests/fast/scrolling/arrow-key-scroll-in-rtl-document-expected.txt:
* LayoutTests/fast/scrolling/arrow-key-scroll-in-rtl-document.html:
* LayoutTests/platform/mac-wk1/fast/scrolling/arrow-key-scroll-in-rtl-document-expected.txt: Removed.
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::shouldUseSmoothKeyboardScrollingForFocusedScrollableArea):
* LayoutTests/fast/scrolling/keyboard-scrolling-distance-pageDown.html:
* LayoutTests/fast/scrolling/unfocusing-page-while-keyboard-scrolling.html:

Canonical link: https://commits.webkit.org/258095@main